--- a/scripts/MST/conf.ini
+++ b/scripts/MST/conf.ini
@@ -27,9 +27,11 @@ PREFIX="chr19_soap2"
 # Control parameter settings 
 #
 
-# please make sure that SEED_MIN >= BIN_SIZE + TAIL_DEL
+# please make sure that SEED_MIN >= MST_BIN_SIZE + TAIL_DEL
+# please make sure that SEED_MIN >= HT_BIN_SIZE * 2 + TAIL_DEL
 SEED_MIN=3235
-BIN_SIZE=3200
+MST_BIN_SIZE=3200
+HT_BIN_SIZE=1600
 TAIL_DEL=35
 BIN_CLUSTER=0.05
 HT_CLUSTER=0.01
