--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -104,6 +104,8 @@ FillTrunkByPE_o				= ${FillTrunkByPE_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 FCRFByTF_cpp 			= FCRFByTF.cpp
 FCRFByTF_o				= ${FCRFByTF_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
+FakePE2BC_cpp 			= FakePE2BC.cpp
+FakePE2BC_o				= ${FakePE2BC_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
@@ -128,6 +130,7 @@ jobs 	   =	ChopBin\
 				Gap_OAO\
 				ExternContigByPE\
 				FCRFByTF\
+				FakePE2BC\
 				FillTrunkByPE\
 				SeedCluster\
 
@@ -150,6 +153,7 @@ jobs_o 	   =	${ChopBin_o} \
 				${Gap_OAO_o}\
 				${ExternContigByPE_o}\
 				${FCRFByTF_o}\
+				${FakePE2BC_o}\
 				${FillTrunkByPE_o}\
 				${SeedCluster_o}\
 
@@ -160,23 +164,23 @@ bin :
 	mkdir -p ../bin
 
 MergePEInfo : clean ${MergePEInfo_o}
-	${CXX} ${DEUBG_CXX} ${MergePEInfo_o} -o MergePEInfo
+	${CXX} ${MergePEInfo_o} ${DEUBG_CXX} -o MergePEInfo
 	mv $@ ../bin/
 
 SplitContig : clean ${SplitContig_o}
-	${CXX} ${DEUBG_CXX} ${SplitContig_o} -o SplitContig
+	${CXX} ${SplitContig_o} ${DEUBG_CXX}  -o SplitContig
 	mv $@ ../bin/
 
 SplitInfo : clean ${SplitInfo_o}
-	${CXX} ${DEUBG_CXX} ${SplitInfo_o} -o SplitInfo
+	${CXX}  ${SplitInfo_o} ${DEUBG_CXX} -o SplitInfo
 	mv $@ ../bin/
 
 ChopBin : clean ${ChopBin_o}
-	${CXX} ${DEUBG_CXX} ${ChopBin_o} -o ChopBin
+	${CXX}  ${ChopBin_o} ${DEUBG_CXX}-o ChopBin
 	mv $@ ../bin/
 
 ParseContig2Read : clean ${ParseContig2Read_o}
-	${CXX} ${DEUBG_CXX} ${ParseContig2Read_o} -o ParseContig2Read
+	${CXX} ${ParseContig2Read_o} ${DEUBG_CXX} -o ParseContig2Read
 	mv $@ ../bin/
 
 ParseRead2Contig : clean ${ParseRead2Contig_o}
@@ -184,70 +188,73 @@ ParseRead2Contig : clean ${ParseRead2Contig_o}
 	mv $@ ../bin/
 
 ParseReadName : clean ${ParseReadName_o}
-	${CXX} ${DEUBG_CXX} ${ParseReadName_o} -o ParseReadName
+	${CXX}  ${ParseReadName_o} ${DEUBG_CXX} -o ParseReadName
 	mv $@ ../bin/
 
 BinCluster : clean ${BinCluster_o}
-	${CXX} ${DEUBG_CXX} ${BinCluster_o} -o BinCluster
+	${CXX} ${BinCluster_o} ${DEUBG_CXX}  -o BinCluster
 	mv $@ ../bin/
 
 
 StaticsticUnique : clean ${StaticsticUnique_o}
-	${CXX} ${DEUBG_CXX} ${StaticsticUnique_o} -o StaticsticUnique
+	${CXX} ${StaticsticUnique_o} ${DEUBG_CXX} -o StaticsticUnique
 	mv $@ ../bin/
 
 
 Sam2ReadOnContig: clean ${Sam2ReadOnContig_o}
-	${CXX} ${DEUBG_CXX} ${Sam2ReadOnContig_o} -o Sam2ReadOnContig 
+	${CXX}  ${Sam2ReadOnContig_o} ${DEUBG_CXX} -o Sam2ReadOnContig 
 	mv $@ ../bin/
 
 ContigDlink: clean ${ContigDlink_o}
-	${CXX} ${DEUBG_CXX} ${ContigDlink_o} -o ContigDlink
+	${CXX}  ${ContigDlink_o} ${DEUBG_CXX}-o ContigDlink
 	mv $@ ../bin/
 
 FillContigRoad: clean ${FillContigRoad_o}
-	${CXX} ${DEUBG_CXX} ${FillContigRoad_o} -o FillContigRoad 
+	${CXX} ${FillContigRoad_o} ${DEUBG_CXX} -o FillContigRoad 
 	mv $@ ../bin/
 
 MergeContig : clean ${MergeContig_o}
-	${CXX} ${DEUBG_CXX} ${MergeContig_o} -o MergeContig
+	${CXX} ${MergeContig_o}  ${DEUBG_CXX} -o MergeContig
 	mv $@ ../bin/
 
 LinearCDG: clean ${LinearCDG_o}
-	${CXX} ${DEUBG_CXX} ${LinearCDG_o} -o LinearCDG 
+	${CXX} ${LinearCDG_o} ${DEUBG_CXX} -o LinearCDG 
 	mv $@ ../bin/
 
 MinTree: clean ${MinTree_o}
-	${CXX} ${DEUBG_CXX} ${MinTree_o} -o MinTree 
+	${CXX} ${MinTree_o} ${DEUBG_CXX} -o MinTree 
 	mv $@ ../bin/
 
 SeedCluster: clean ${SeedCluster_o}
-	${CXX} ${DEUBG_CXX} ${SeedCluster_o} -o SeedCluster 
+	${CXX} ${SeedCluster_o} ${DEUBG_CXX} -o SeedCluster 
 	mv $@ ../bin/
 
-
 FillTrunkByPE: clean ${FillTrunkByPE_o}
-	${CXX} ${DEUBG_CXX} ${FillTrunkByPE_o} -o FillTrunkByPE 
+	${CXX} ${FillTrunkByPE_o} ${DEUBG_CXX} -o FillTrunkByPE 
+	mv $@ ../bin/
+
+FakePE2BC: clean ${FakePE2BC_o}
+	${CXX}  ${FakePE2BC_o} ${DEUBG_CXX} -o FakePE2BC 
 	mv $@ ../bin/
 
 FCRFByTF: clean ${FCRFByTF_o}
-	${CXX} ${DEUBG_CXX} ${FCRFByTF_o} -o FCRFByTF 
+	${CXX}  ${FCRFByTF_o} ${DEUBG_CXX} -o FCRFByTF 
 	mv $@ ../bin/
 
 ExternContigByPE: clean ${ExternContigByPE_o}
-	${CXX} ${DEUBG_CXX} ${ExternContigByPE_o} -o ExternContigByPE 
+	${CXX}  ${ExternContigByPE_o} ${DEUBG_CXX} -o ExternContigByPE 
 	mv $@ ../bin/
 
 Gap_OAO: clean ${Gap_OAO_o}
-	${CXX} ${DEUBG_CXX} ${Gap_OAO_o} -o Gap_OAO 
+	${CXX} ${Gap_OAO_o}  ${DEUBG_CXX} -o Gap_OAO 
 	mv $@ ../bin/
 
 PEGraph: clean ${PEGraph_o}
-	${CXX} ${DEUBG_CXX} ${PEGraph_o} -o PEGraph 
+	${CXX}  ${PEGraph_o} ${DEUBG_CXX} -o PEGraph 
 	mv $@ ../bin/
 
 Trunk2Scaff: clean ${Trunk2Scaff_o}
-	${CXX} ${DEUBG_CXX} ${Trunk2Scaff_o} -o Trunk2Scaff 
+	${CXX} ${Trunk2Scaff_o} ${DEUBG_CXX} -o Trunk2Scaff 
 	mv $@ ../bin/
 
 dirty	   =${jobs_o} ${jobs}  
