--- a/scripts/MST/conf.ini
+++ b/scripts/MST/conf.ini
@@ -27,14 +27,16 @@ PREFIX="chr19_soap2"
 # Control parameter settings 
 #
 
-TAIL_DEL=35
-# please make sure that SEED_MIN >= MST_BIN_SIZE + TAIL_DEL
-MST_SEED_MIN=3235
+BWA_K=53
+# please make sure that SEED_MIN >= MST_BIN_SIZE
+MST_SEED_MIN=3200
 MST_BIN_SIZE=3200
-MST_CLUSTER=0.1
-MST_BIN_CLUSTER=0.05
+# normally you don't need change the cluster value.
+# use 0.01 is good enough.
+MST_CLUSTER=0.01
+MST_BIN_CLUSTER=0.01
 
-# please make sure that SEED_MIN >= HT_BIN_SIZE * 2 + TAIL_DEL
+# please make sure that SEED_MIN >= HT_BIN_SIZE * 2 
 HT_BIN_SIZE=1600
 HT_CLUSTER=0.01
 RANK=4
