--- a/scripts/MST_with_pe_fill/conf.ini
+++ b/scripts/MST_with_pe_fill/conf.ini
@@ -27,17 +27,17 @@ PREFIX="chr19_soap2"
 # Control parameter settings 
 #
 
-TAIL_DEL=35
-# please make sure that MST_SEED_MIN >= MST_BIN_SIZE + TAIL_DEL
-MST_SEED_MIN=3235
+BWA_K=63
+# please make sure that MST_SEED_MIN >= MST_BIN_SIZE 
+MST_SEED_MIN=3200
 MST_BIN_SIZE=3200
-MST_BIN_CLUSTER=0.05
-MST_CLUSTER=0.1
-# please make sure that MST_SEED_MIN >= HT_BIN_SIZE*2 + TAIL_DEL
+MST_BIN_CLUSTER=0.01
+MST_CLUSTER=0.01
+# please make sure that MST_SEED_MIN >= HT_BIN_SIZE*2 
 HT_BIN_SIZE=1600
 HT_BIN_CLUSTER=0.01
 RANK=4
-# please make sure that PE_SEED_MIN >= PE_BIN_SIZE*2 + TAIL_DEL
+# please make sure that PE_SEED_MIN >= PE_BIN_SIZE*2 
 PE_SEED_MIN=235
 PE_BIN_SIZE=200
 PE_BIN_CLUSTER=0.05
