--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -49,258 +49,258 @@ all :  ${jobs}
 
 
 Barcode2Scaffold_cpp = Barcode2Scaffold.cpp
-Barcode2Scaffold_o = ${Barcode2Scaffold_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-Barcode2Scaffold : clean ${Barcode2Scaffold_o} ../bin
-	${CXX} ${Barcode2Scaffold_o} ${DEUBG_CXX} -o Barcode2Scaffold
+Barcode2Scaffold_o = Barcode2Scaffold.o
+Barcode2Scaffold : clean ${Barcode2Scaffold_o} ${source_o} ../bin
+	${CXX} ${Barcode2Scaffold_o} ${source_o} ${DEUBG_CXX} -o Barcode2Scaffold
 	mv $@ ../bin/
 
 
 
 
 BinCluster_cpp = BinCluster.cpp
-BinCluster_o = ${BinCluster_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-BinCluster : clean ${BinCluster_o} ../bin
-	${CXX} ${BinCluster_o} ${DEUBG_CXX} -o BinCluster
+BinCluster_o = BinCluster.o
+BinCluster : clean ${BinCluster_o} ${source_o} ../bin
+	${CXX} ${BinCluster_o} ${source_o} ${DEUBG_CXX} -o BinCluster
 	mv $@ ../bin/
 
 
 
 
 BaR2ScaffGap_cpp = BaR2ScaffGap.cpp
-BaR2ScaffGap_o = ${BaR2ScaffGap_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-BaR2ScaffGap : clean ${BaR2ScaffGap_o} ../bin
-	${CXX} ${BaR2ScaffGap_o} ${DEUBG_CXX} -o BaR2ScaffGap
+BaR2ScaffGap_o = BaR2ScaffGap.o
+BaR2ScaffGap : clean ${BaR2ScaffGap_o} ${source_o} ../bin
+	${CXX} ${BaR2ScaffGap_o} ${source_o} ${DEUBG_CXX} -o BaR2ScaffGap
 	mv $@ ../bin/
 
 
 
 
 ChopBin_cpp = ChopBin.cpp
-ChopBin_o = ${ChopBin_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ChopBin : clean ${ChopBin_o} ../bin
-	${CXX} ${ChopBin_o} ${DEUBG_CXX} -o ChopBin
+ChopBin_o = ChopBin.o
+ChopBin : clean ${ChopBin_o} ${source_o} ../bin
+	${CXX} ${ChopBin_o} ${source_o} ${DEUBG_CXX} -o ChopBin
 	mv $@ ../bin/
 
 
 
 
 ContigDlink_cpp = ContigDlink.cpp
-ContigDlink_o = ${ContigDlink_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ContigDlink : clean ${ContigDlink_o} ../bin
-	${CXX} ${ContigDlink_o} ${DEUBG_CXX} -o ContigDlink
+ContigDlink_o = ContigDlink.o
+ContigDlink : clean ${ContigDlink_o} ${source_o} ../bin
+	${CXX} ${ContigDlink_o} ${source_o} ${DEUBG_CXX} -o ContigDlink
 	mv $@ ../bin/
 
 
 
 
 ExternContigByPE_cpp = ExternContigByPE.cpp
-ExternContigByPE_o = ${ExternContigByPE_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ExternContigByPE : clean ${ExternContigByPE_o} ../bin
-	${CXX} ${ExternContigByPE_o} ${DEUBG_CXX} -o ExternContigByPE
+ExternContigByPE_o = ExternContigByPE.o
+ExternContigByPE : clean ${ExternContigByPE_o} ${source_o} ../bin
+	${CXX} ${ExternContigByPE_o} ${source_o} ${DEUBG_CXX} -o ExternContigByPE
 	mv $@ ../bin/
 
 
 
 
 FakePE2BC_cpp = FakePE2BC.cpp
-FakePE2BC_o = ${FakePE2BC_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-FakePE2BC : clean ${FakePE2BC_o} ../bin
-	${CXX} ${FakePE2BC_o} ${DEUBG_CXX} -o FakePE2BC
+FakePE2BC_o = FakePE2BC.o
+FakePE2BC : clean ${FakePE2BC_o} ${source_o} ../bin
+	${CXX} ${FakePE2BC_o} ${source_o} ${DEUBG_CXX} -o FakePE2BC
 	mv $@ ../bin/
 
 
 
 
 FCRFByTF_cpp = FCRFByTF.cpp
-FCRFByTF_o = ${FCRFByTF_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-FCRFByTF : clean ${FCRFByTF_o} ../bin
-	${CXX} ${FCRFByTF_o} ${DEUBG_CXX} -o FCRFByTF
+FCRFByTF_o = FCRFByTF.o
+FCRFByTF : clean ${FCRFByTF_o} ${source_o} ../bin
+	${CXX} ${FCRFByTF_o} ${source_o} ${DEUBG_CXX} -o FCRFByTF
 	mv $@ ../bin/
 
 
 
 
 FillContigRoad_cpp = FillContigRoad.cpp
-FillContigRoad_o = ${FillContigRoad_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-FillContigRoad : clean ${FillContigRoad_o} ../bin
-	${CXX} ${FillContigRoad_o} ${DEUBG_CXX} -o FillContigRoad
+FillContigRoad_o = FillContigRoad.o
+FillContigRoad : clean ${FillContigRoad_o} ${source_o} ../bin
+	${CXX} ${FillContigRoad_o} ${source_o} ${DEUBG_CXX} -o FillContigRoad
 	mv $@ ../bin/
 
 
 
 
 FillTrunkByPE_cpp = FillTrunkByPE.cpp
-FillTrunkByPE_o = ${FillTrunkByPE_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-FillTrunkByPE : clean ${FillTrunkByPE_o} ../bin
-	${CXX} ${FillTrunkByPE_o} ${DEUBG_CXX} -o FillTrunkByPE
+FillTrunkByPE_o = FillTrunkByPE.o
+FillTrunkByPE : clean ${FillTrunkByPE_o} ${source_o} ../bin
+	${CXX} ${FillTrunkByPE_o} ${source_o} ${DEUBG_CXX} -o FillTrunkByPE
 	mv $@ ../bin/
 
 
 
 
 Gap_OAO_cpp = Gap_OAO.cpp
-Gap_OAO_o = ${Gap_OAO_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-Gap_OAO : clean ${Gap_OAO_o} ../bin
-	${CXX} ${Gap_OAO_o} ${DEUBG_CXX} -o Gap_OAO
+Gap_OAO_o = Gap_OAO.o
+Gap_OAO : clean ${Gap_OAO_o} ${source_o} ../bin
+	${CXX} ${Gap_OAO_o} ${source_o} ${DEUBG_CXX} -o Gap_OAO
 	mv $@ ../bin/
 
 
 
 
 LinearCDG_cpp = LinearCDG.cpp
-LinearCDG_o = ${LinearCDG_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-LinearCDG : clean ${LinearCDG_o} ../bin
-	${CXX} ${LinearCDG_o} ${DEUBG_CXX} -o LinearCDG
+LinearCDG_o = LinearCDG.o
+LinearCDG : clean ${LinearCDG_o} ${source_o} ../bin
+	${CXX} ${LinearCDG_o} ${source_o} ${DEUBG_CXX} -o LinearCDG
 	mv $@ ../bin/
 
 
 
 
 MergeContig_cpp = MergeContig.cpp
-MergeContig_o = ${MergeContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-MergeContig : clean ${MergeContig_o} ../bin
-	${CXX} ${MergeContig_o} ${DEUBG_CXX} -o MergeContig
+MergeContig_o = MergeContig.o
+MergeContig : clean ${MergeContig_o} ${source_o} ../bin
+	${CXX} ${MergeContig_o} ${source_o} ${DEUBG_CXX} -o MergeContig
 	mv $@ ../bin/
 
 
 
 
 MergePEInfo_cpp = MergePEInfo.cpp
-MergePEInfo_o = ${MergePEInfo_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-MergePEInfo : clean ${MergePEInfo_o} ../bin
-	${CXX} ${MergePEInfo_o} ${DEUBG_CXX} -o MergePEInfo
+MergePEInfo_o = MergePEInfo.o
+MergePEInfo : clean ${MergePEInfo_o} ${source_o} ../bin
+	${CXX} ${MergePEInfo_o} ${source_o} ${DEUBG_CXX} -o MergePEInfo
 	mv $@ ../bin/
 
 
 
 
 MinTree_cpp = MinTree.cpp
-MinTree_o = ${MinTree_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-MinTree : clean ${MinTree_o} ../bin
-	${CXX} ${MinTree_o} ${DEUBG_CXX} -o MinTree
+MinTree_o = MinTree.o
+MinTree : clean ${MinTree_o} ${source_o} ../bin
+	${CXX} ${MinTree_o} ${source_o} ${DEUBG_CXX} -o MinTree
 	mv $@ ../bin/
 
 
 
 
 MST_cpp = MST.cpp
-MST_o = ${MST_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-MST : clean ${MST_o} ../bin
-	${CXX} ${MST_o} ${DEUBG_CXX} -o MST
+MST_o = MST.o
+MST : clean ${MST_o} ${source_o} ../bin
+	${CXX} ${MST_o} ${source_o} ${DEUBG_CXX} -o MST
 	mv $@ ../bin/
 
 
 
 
 ParseContig2Read_cpp = ParseContig2Read.cpp
-ParseContig2Read_o = ${ParseContig2Read_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ParseContig2Read : clean ${ParseContig2Read_o} ../bin
-	${CXX} ${ParseContig2Read_o} ${DEUBG_CXX} -o ParseContig2Read
+ParseContig2Read_o = ParseContig2Read.o
+ParseContig2Read : clean ${ParseContig2Read_o} ${source_o} ../bin
+	${CXX} ${ParseContig2Read_o} ${source_o} ${DEUBG_CXX} -o ParseContig2Read
 	mv $@ ../bin/
 
 
 
 
 ParseRead2Contig_cpp = ParseRead2Contig.cpp
-ParseRead2Contig_o = ${ParseRead2Contig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ParseRead2Contig : clean ${ParseRead2Contig_o} ../bin
-	${CXX} ${ParseRead2Contig_o} ${DEUBG_CXX} -o ParseRead2Contig
+ParseRead2Contig_o = ParseRead2Contig.o
+ParseRead2Contig : clean ${ParseRead2Contig_o} ${source_o} ../bin
+	${CXX} ${ParseRead2Contig_o} ${source_o} ${DEUBG_CXX} -o ParseRead2Contig
 	mv $@ ../bin/
 
 
 
 
 ParseReadName_cpp = ParseReadName.cpp
-ParseReadName_o = ${ParseReadName_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ParseReadName : clean ${ParseReadName_o} ../bin
-	${CXX} ${ParseReadName_o} ${DEUBG_CXX} -o ParseReadName
+ParseReadName_o = ParseReadName.o
+ParseReadName : clean ${ParseReadName_o} ${source_o} ../bin
+	${CXX} ${ParseReadName_o} ${source_o} ${DEUBG_CXX} -o ParseReadName
 	mv $@ ../bin/
 
 
 
 
 PEGraph_cpp = PEGraph.cpp
-PEGraph_o = ${PEGraph_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-PEGraph : clean ${PEGraph_o} ../bin
-	${CXX} ${PEGraph_o} ${DEUBG_CXX} -o PEGraph
+PEGraph_o = PEGraph.o
+PEGraph : clean ${PEGraph_o} ${source_o} ../bin
+	${CXX} ${PEGraph_o} ${source_o} ${DEUBG_CXX} -o PEGraph
 	mv $@ ../bin/
 
 
 
 
 ReadName2Num_cpp = ReadName2Num.cpp
-ReadName2Num_o = ${ReadName2Num_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-ReadName2Num : clean ${ReadName2Num_o} ../bin
-	${CXX} ${ReadName2Num_o} ${DEUBG_CXX} -o ReadName2Num
+ReadName2Num_o = ReadName2Num.o
+ReadName2Num : clean ${ReadName2Num_o} ${source_o} ../bin
+	${CXX} ${ReadName2Num_o} ${source_o} ${DEUBG_CXX} -o ReadName2Num
 	mv $@ ../bin/
 
 
 
 
 Sam2ReadOnContig_cpp = Sam2ReadOnContig.cpp
-Sam2ReadOnContig_o = ${Sam2ReadOnContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-Sam2ReadOnContig : clean ${Sam2ReadOnContig_o} ../bin
-	${CXX} ${Sam2ReadOnContig_o} ${DEUBG_CXX} -o Sam2ReadOnContig
+Sam2ReadOnContig_o = Sam2ReadOnContig.o
+Sam2ReadOnContig : clean ${Sam2ReadOnContig_o} ${source_o} ../bin
+	${CXX} ${Sam2ReadOnContig_o} ${source_o} ${DEUBG_CXX} -o Sam2ReadOnContig
 	mv $@ ../bin/
 
 
 
 
 SeedCluster_cpp = SeedCluster.cpp
-SeedCluster_o = ${SeedCluster_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-SeedCluster : clean ${SeedCluster_o} ../bin
-	${CXX} ${SeedCluster_o} ${DEUBG_CXX} -o SeedCluster
+SeedCluster_o = SeedCluster.o
+SeedCluster : clean ${SeedCluster_o} ${source_o} ../bin
+	${CXX} ${SeedCluster_o} ${source_o} ${DEUBG_CXX} -o SeedCluster
 	mv $@ ../bin/
 
 
 
 
 SplitInfo_cpp = SplitInfo.cpp
-SplitInfo_o = ${SplitInfo_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-SplitInfo : clean ${SplitInfo_o} ../bin
-	${CXX} ${SplitInfo_o} ${DEUBG_CXX} -o SplitInfo
+SplitInfo_o = SplitInfo.o
+SplitInfo : clean ${SplitInfo_o} ${source_o} ../bin
+	${CXX} ${SplitInfo_o} ${source_o} ${DEUBG_CXX} -o SplitInfo
 	mv $@ ../bin/
 
 
 
 
 SplitScaffWithReads_cpp = SplitScaffWithReads.cpp
-SplitScaffWithReads_o = ${SplitScaffWithReads_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-SplitScaffWithReads : clean ${SplitScaffWithReads_o} ../bin
-	${CXX} ${SplitScaffWithReads_o} ${DEUBG_CXX} -o SplitScaffWithReads
+SplitScaffWithReads_o = SplitScaffWithReads.o
+SplitScaffWithReads : clean ${SplitScaffWithReads_o} ${source_o} ../bin
+	${CXX} ${SplitScaffWithReads_o} ${source_o} ${DEUBG_CXX} -o SplitScaffWithReads
 	mv $@ ../bin/
 
 
 
 
 StaticsticUnique_cpp = StaticsticUnique.cpp
-StaticsticUnique_o = ${StaticsticUnique_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-StaticsticUnique : clean ${StaticsticUnique_o} ../bin
-	${CXX} ${StaticsticUnique_o} ${DEUBG_CXX} -o StaticsticUnique
+StaticsticUnique_o = StaticsticUnique.o
+StaticsticUnique : clean ${StaticsticUnique_o} ${source_o} ../bin
+	${CXX} ${StaticsticUnique_o} ${source_o} ${DEUBG_CXX} -o StaticsticUnique
 	mv $@ ../bin/
 
 
 
 
 Trunk2Scaff_cpp = Trunk2Scaff.cpp
-Trunk2Scaff_o = ${Trunk2Scaff_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-Trunk2Scaff : clean ${Trunk2Scaff_o} ../bin
-	${CXX} ${Trunk2Scaff_o} ${DEUBG_CXX} -o Trunk2Scaff
+Trunk2Scaff_o = Trunk2Scaff.o
+Trunk2Scaff : clean ${Trunk2Scaff_o} ${source_o} ../bin
+	${CXX} ${Trunk2Scaff_o} ${source_o} ${DEUBG_CXX} -o Trunk2Scaff
 	mv $@ ../bin/
 
 
 
 
 Trunk2ScaffGap_cpp = Trunk2ScaffGap.cpp
-Trunk2ScaffGap_o = ${Trunk2ScaffGap_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-Trunk2ScaffGap : clean ${Trunk2ScaffGap_o} ../bin
-	${CXX} ${Trunk2ScaffGap_o} ${DEUBG_CXX} -o Trunk2ScaffGap
+Trunk2ScaffGap_o = Trunk2ScaffGap.o
+Trunk2ScaffGap : clean ${Trunk2ScaffGap_o} ${source_o} ../bin
+	${CXX} ${Trunk2ScaffGap_o} ${source_o} ${DEUBG_CXX} -o Trunk2ScaffGap
 	mv $@ ../bin/
 
 
 jobs_o=  ${Barcode2Scaffold_o} ${BinCluster_o} ${BaR2ScaffGap_o} ${ChopBin_o} ${ContigDlink_o} ${ExternContigByPE_o} ${FakePE2BC_o} ${FCRFByTF_o} ${FillContigRoad_o} ${FillTrunkByPE_o} ${Gap_OAO_o} ${LinearCDG_o} ${MergeContig_o} ${MergePEInfo_o} ${MinTree_o} ${MST_o} ${ParseContig2Read_o} ${ParseRead2Contig_o} ${ParseReadName_o} ${PEGraph_o} ${ReadName2Num_o} ${Sam2ReadOnContig_o} ${SeedCluster_o} ${SplitInfo_o} ${SplitScaffWithReads_o} ${StaticsticUnique_o} ${Trunk2Scaff_o} ${Trunk2ScaffGap_o}
 
-dirty	   =${jobs_o} ${jobs}
+dirty	   =${jobs_o} ${jobs} ${source_o}
 
 ../bin:
 	mkdir -p ../bin
