new PE pipeline

--- a/scripts/MST/conf.ini
+++ b/scripts/MST/conf.ini
@@ -20,6 +20,7 @@ BWA_DIR="/share/app/bwa-0.7.12"
 R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
 R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
 SOAP_DIR="/home/guolidong/stLFR/new_chr19/chr19/standard_soap2_k48_09_03_11_35_24"
+SOAP_K=63
 PREFIX="chr19_soap2"
 
 ###############################################################################
@@ -37,9 +38,12 @@ MST_BIN_CLUSTER=0.01
 
 # please make sure that SEED_MIN >= HT_BIN_SIZE * 2 
 HT_BIN_SIZE=1600
-HT_CLUSTER=0.01
+HT_BIN_CLUSTER=0.01
 RANK=4
 
+###################################################
+# parameters for generate sequence 
+#
 MIN_SCONTIG=300
 MIN_N=1
 MIN_C=1
