--- a/scripts/MST_with_pe_fill/conf.ini
+++ b/scripts/MST_with_pe_fill/conf.ini
@@ -27,7 +27,7 @@ PREFIX="chr19_soap2"
 # Control parameter settings 
 #
 
-BWA_K=63
+BWA_K=53
 # please make sure that MST_SEED_MIN >= MST_BIN_SIZE 
 MST_SEED_MIN=3200
 MST_BIN_SIZE=3200
@@ -39,10 +39,14 @@ HT_BIN_CLUSTER=0.01
 RANK=4
 # please make sure that PE_SEED_MIN >= PE_BIN_SIZE*2 
 PE_SEED_MIN=235
-PE_BIN_SIZE=200
-PE_BIN_CLUSTER=0.05
 MAX_INSERT_SIZE=1000
 PE_SEARCH_MAX=5000
 PE_MIN_COUNT=3
 PE_FILL=5
+
+###################################################
+# parameters for generate sequence 
+#
 MIN_SCONTIG=300
+MIN_N=1
+MIN_C=1
